Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Prograpedia.GitHub.io by prograpedia</title>
+    <title>Prograpedia by prograpedia</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Prograpedia.GitHub.io</h1>
-        <p>Prograpedia Repo</p>
+        <h1>Prograpedia</h1>
+        <p>La enciclopedia de la programación</p>
 
 
         <p class="view"><a href="https://github.com/prograpedia">View My GitHub Profile</a></p>
